welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: not found: value i
while(i<5){i=i+1;avance();} 
      ^Balin:3: error: not found: value i
while(i<5){i=i+1;avance();} 
           ^