welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(estSurBiscuit()==false){recule();}
prendBiscuit()
while(i<5){i=i+1;avance();}